--- a/pom.xml
+++ b/pom.xml
@@ -50,5 +50,11 @@
             <version>${zookeeper.version}</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.17.1</version>
+        </dependency>
     </dependencies>
 </project>
