--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
 
         <dependency>
             <groupId>org.apache.curator</groupId>
-            <artifactId>curator-recipes</artifactId>
+            <artifactId>curator-framework</artifactId>
             <version>${curator.version}</version>
             <scope>provided</scope>
         </dependency>
